# financeX

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.css  App.tsx  CategoryChart.tsx  Dashboard.tsx  EkGelir.tsx  Expenses.tsx  InputPanel.css  InputPanel.tsx  LogsPanel.tsx  Planning.tsx  analytics.ts  cloudSync.ts  debugLogger.ts  index.css  main.tsx  persistence.ts  store.ts  supabase.ts
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: app-data-access.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: app-allow-persistence.json
src-tauri/src/: main.rs
