[package]
name = "financex"
version = "0.1.0"
edition = "2021"
description = "financeX masaüstü uygulaması"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1", features = [] }
rusqlite = { version = "0.30.0", features = ["bundled"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
